# sfml-cmake

./: CMakeLists.txt  main.cpp
